tests/fixtures/valid/builtins/int_float_conversion.py
# int/float conversion
print(int(3.7))
print(int(3.2))
print(int(-3.7))
print(float(5))
print(float(-5))
