tests/fixtures/invalid/pow_mod_not_int.py
# pow() with 3 arguments requires all int arguments
print(pow(2.0, 3, 5))
